# Transformers-LM-Benchmark

./: README.org  pyproject.toml  run_benchmarks.py
data/: efficient_new_no_fp_memory_inference_result.csv  efficient_new_no_fp_nt_time_inference_result.csv  efficient_new_no_fp_time_inference_result.csv  efficient_training_no_fp_nt_memory_inference_result.csv  efficient_training_no_fp_nt_time_inference_result.csv  efficient_training_no_fp_time_inference_result.csv  efficient_training_no_fp_time_train_result.csv  efficient_training_no_fp_wt_memory_train_result.csv  efficient_training_no_fp_wt_time_inference_result.csv  efficient_training_no_fp_wt_time_train_result.csv  regular_no_fp_memory_inference_result.csv  regular_no_fp_nt_memory_inference_result.csv  regular_no_fp_nt_time_inference_result.csv  regular_no_fp_time_inference_result.csv  regular_no_fp_wt_memory_inference_result.csv  regular_no_fp_wt_memory_train_result.csv  regular_no_fp_wt_time_inference_result.csv  regular_no_fp_wt_time_train_result.csv
data_fp16/: efficient_new_fp_nt_memory_inference_result.csv  efficient_new_fp_nt_time_inference_result.csv  efficient_training_fp_nt_memory_inference_result.csv  efficient_training_fp_nt_time_inference_result.csv  efficient_training_fp_wt_memory_train_result.csv  efficient_training_fp_wt_time_inference_result.csv  efficient_training_fp_wt_time_train_result.csv  regular_fp_nt_memory_inference_result.csv  regular_fp_nt_time_inference_result.csv  regular_fp_wt_memory_inference_result.csv  regular_fp_wt_memory_train_result.csv  regular_fp_wt_time_inference_result.csv  (+1 more)
(+1 files in other folders)
